# -Hackathon-2-Phases-4-

./: $null  .dockerignore  .gitignore  BACKEND_DEPLOY.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOY_NOW.md  DEPLOY_STEP_BY_STEP.md  K8S_QUICK_REFERENCE.md  KUBERNETES_DEPLOYMENT.md  PHASE4_AI_WORKFLOWS.md  PHASE4_COMPLETE.md  PHASE4_README.md  QUICK_DEPLOY.md  README.md  SPEC_DRIVEN_BLUEPRINTS.md  UPLOAD_COMPLETE.md  demo-phase4.bat  deploy-all.bat  deploy-k8s-auto.bat  deploy-k8s-auto.sh  deploy-minikube.bat  deploy-minikube.sh  docker-compose.yml  local_backend.py  package-lock.json  resolution_notes.txt  run_backend.py  seed.sql  simple_auth_test.py  start_server.py  test_auth.py  test_server.py  test_user_registration.py  vercel-deploy.json  vercel.json
backend/: .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  auth_only_main.py  create_test_user.py  fixed_user_test.py  minimal_user_test.py  pyproject.toml  requirements.txt  temp_main.py  test_imports.py  test_model.py
backend/migrations/: env.py
backend/migrations/versions/: phase3_chatbot.py
backend/src/: main.py  main_auth_only.py  main_fixed.py  main_full.py
backend/src/agent/: __init__.py  ambiguity_resolver.py  chat_agent.py  context_manager.py  mcp_service.py  mcp_tools.py  reasoning_engine.py  service.py
backend/src/database/: config.py  session.py
backend/src/models/: agent.py  chat.py  task.py  task_simple.py  user.py
backend/src/routes/: agent.py  auth.py  chat.py  tasks.py  users.py
backend/src/schemas/: agent.py  chat.py  task.py  user.py
(+196 files in other folders)
